SERVER-17889 MapReduceCommand::run() error out from DBDirectClient